k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simpleweb
spec:
  rules:
  - host: dev.addr-in-hosts.com
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: simpleweb-dev
              port:
                number: 80
  - host: prod.addr-in-hosts.com
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: simpleweb-prod
              port:
                number: 80
